# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: lint_check.yml  run_tests.yml
task_manager/: mixin.py  settings.py  test_help.py  tests.py  urls.py  views.py
task_manager/fixtures/: label.json  status.json  task.json  test_label.json  test_status.json  test_task.json  test_user.json  user.json
task_manager/labels/: apps.py  forms.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test.py  test_forms.py  test_models.py  test_post.py  test_views.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test.py  test_models.py  test_post.py  test_view.py  tests_forms.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/tests/: test.py  test_forms.py  test_models.py  test_post.py  test_view.py
task_manager/templates/: 404.html  base.html  footer.html  form.html  index.html  navbar.html
task_manager/templates/labels/: delete.html  labels.html
task_manager/templates/statuses/: delete.html  statuses.html
task_manager/templates/tasks/: delete.html  show.html  tasks.html
task_manager/templates/users/: delete.html  users.html
task_manager/users/: apps.py  forms.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_active_and_more.py
(+4 files in other folders)
