[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["fooxeed <fooxeed@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.7"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
django-bootstrap4 = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
