[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["fooxeed <fooxeed@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
Django = "^5.0.7"
whitenoise = "^6.6.0"
django-bootstrap5 = "^24.2"
django-filter = "^24.2"
rollbar = "^0.16.3"












[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
